@@ -92,7 +92,7 @@ int main ( G_GNUC_UNUSED int argc, G_GNUC_UNUSED char **argv )
     config.menu_bg_alt = config.menu_bg;
     textbox_setup ( display );
     textbox *box = textbox_create ( TB_EDITABLE | TB_AUTOWIDTH | TB_AUTOHEIGHT, 0, 0, -1, -1,
-                         NORMAL, "test" );
+                                    NORMAL, "test" );
     TASSERT ( box != NULL );
 
     textbox_cursor_end ( box );
